--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#EA5D6B" />
+    <meta name="description" content="Chopperflix - um HUB para AMV's 🦝" />
+    <meta name="copyright" content="© 2020 Carlos Castro" />
+    <meta
+      property="og:image"
+      content="https://chopperflix.web.app/static/media/choppersvg.6c91c571.png"
+    />
+    <meta property="og:locale" content="pt_br" />
+    <meta property="og:url" content="https://chopperflix.web.app/" />
+    <meta property="og:title" content="Chopperflix" />
+    <meta property="og:site_name" content="Chopperflix" />
+    <meta
+      property="og:description"
+      content="Chopperflix - um HUB para AMV's 🦝"
+    />
+    <meta
+      property="og:image"
+      content="https://chopperflix.web.app/static/media/choppersvg.6c91c571.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="779" />
+    <meta property="og:image:height" content="1025" />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="%PUBLIC_URL%/logo-152x152.png"
+    />
+    <title>Chopperflix</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#EA5D6B" />
-  <meta name="description" content="Chopperflix - um HUB para AMV's 🦝" />
-  <meta name="copyright" content="© 2020 Carlos Castro" />
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" sizes="164x34" href="%PUBLIC_URL%/logo-164x34.png" />
-  <title>Chopperflix</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
