--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#EA5D6B" />
+    <meta name="theme-color" content="#f282ad" />
     <meta name="description" content="Chopperflix - um HUB para AMV's 🦝" />
     <meta name="copyright" content="© 2020 Carlos Castro" />
     <meta
